WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
117990
Fix cast-align warnings in WebCore/platform/graphics/cairo
https://bugs.webkit.org/show_bug.cgi?id=117990
Summary
Fix cast-align warnings in WebCore/platform/graphics/cairo
Csaba Osztrogonác
Reported
2013-06-25 06:44:30 PDT
SSIA
Attachments
Patch
(3.67 KB, patch)
2013-06-25 06:45 PDT
,
Csaba Osztrogonác
commit-queue
: commit-queue-
Details
Formatted Diff
Diff
Archive of layout-test-results from APPLE-EWS-7 for win-future
(798.24 KB, application/zip)
2013-06-25 16:17 PDT
,
Build Bot
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Csaba Osztrogonác
Comment 1
2013-06-25 06:45:35 PDT
Created
attachment 205399
[details]
Patch
Build Bot
Comment 2
2013-06-25 16:17:12 PDT
Comment on
attachment 205399
[details]
Patch
Attachment 205399
[details]
did not pass win-ews (win): Output:
http://webkit-queues.appspot.com/results/917085
New failing tests: fast/frames/seamless/seamless-nested-crash.html
Build Bot
Comment 3
2013-06-25 16:17:14 PDT
Created
attachment 205429
[details]
Archive of layout-test-results from APPLE-EWS-7 for win-future The attached test failures were seen while running run-webkit-tests on the win-ews. Bot: APPLE-EWS-7 Port: win-future Platform: CYGWIN_NT-6.1-WOW64-1.7.20-0.266-5-3-i686-32bit
Rob Buis
Comment 4
2013-06-26 12:54:53 PDT
Comment on
attachment 205399
[details]
Patch LGTM.
WebKit Commit Bot
Comment 5
2013-06-27 00:58:11 PDT
Comment on
attachment 205399
[details]
Patch Rejecting
attachment 205399
[details]
from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.appspot.com', '--bot-id=webkit-cq-02', 'validate-changelog', '--check-oops', '--non-interactive', 205399, '--port=mac']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit ChangeLog entry in Source/WebCore/ChangeLog contains OOPS!. Full output:
http://webkit-queues.appspot.com/results/981398
Csaba Osztrogonác
Comment 6
2013-06-27 03:10:53 PDT
Committed
r152086
: <
http://trac.webkit.org/changeset/152086
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug