Fix cast-align warnings in WebCore/platform/graphics/cairo https://bugs.webkit.org/show_bug.cgi?id=117990

Reviewed by Rob Buis.

* platform/graphics/cairo/BitmapImageCairo.cpp:
(WebCore::BitmapImage::checkForSolidColor):
* platform/graphics/cairo/ImageBufferCairo.cpp:
(WebCore::ImageBuffer::platformTransformColorSpace):
(WebCore::getImageData):
(WebCore::ImageBuffer::putByteArray):

Canonical link: https://commits.webkit.org/136165@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@152086 268f45cc-cd09-0410-ab3c-d52691b4dbfc